<resources>
    <string name="app_name">Sudoku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">Clear</string>
    <string name="icon">Icon</string>
    <string name="game">Game</string>
    <string name="hint">Hint</string>
    <string name="exit">Exit</string>
    <string name="help_settings">Help Settings</string>
    <string name="new_sudoku">New Sudoku</string>
    <string name="restart_this_sudoku">Restart This Sudoku</string>
    <string name="very_easy">Very Easy</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="expert">Expert</string>
    <string name="extreme">Extreme</string>
    <string name="back">Back</string>
    <string name="mainmenu">Mainmenu</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="share">Share</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="close">Close</string>
</resources>