<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:theme="@style/ToolBarStyle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">



            <com.forbit.sudoku.customView.SudokuView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sudokuview" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sudokuview"
                android:layout_marginTop="10dp"
                android:background="@color/black">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/one"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/two"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/three"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/four"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/five"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/six"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seven"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/eight"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nine"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#F1F0F0"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/game" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/clear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/clear" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/ripple"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_baseline_api_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hint" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>